update operator chart rbac

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -223,12 +223,38 @@ rules:
   verbs:
   - '*'
 - apiGroups:
+  - extensions.istio.io
+  resources:
+  - '*'
+  verbs:
+  - get
+  - list
+  - watch
+- apiGroups:
+  - gateway.networking.k8s.io
+  resources:
+  - '*'
+  verbs:
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
   - multicluster.x-k8s.io
   resources:
   - serviceexports
   verbs:
   - create
   - delete
+  - get
+  - list
+  - watch
+- apiGroups:
+  - multicluster.x-k8s.io
+  resources:
+  - serviceimports
+  verbs:
   - get
   - list
   - watch
@@ -254,6 +280,7 @@ rules:
   verbs:
   - get
   - list
+  - patch
   - update
   - watch
 - apiGroups:
