--- a/internal/assets/manifests/istio-discovery/resources/injection-template.yaml
+++ b/internal/assets/manifests/istio-discovery/resources/injection-template.yaml
@@ -123,7 +123,7 @@ spec:
         drop:
         - ALL
       privileged: true
-      readOnlyRootFilesystem: {{ ne (annotation .ObjectMeta `sidecar.istio.io/enableCoreDump` .Values.global.proxy.enableCoreDump) true" }}
+      readOnlyRootFilesystem: {{ ne (annotation .ObjectMeta `sidecar.istio.io/enableCoreDump` .Values.global.proxy.enableCoreDump) "true" }}
       runAsGroup: 1337
       fsGroup: 1337
       runAsNonRoot: false
