--- a/internal/components/discovery/testdata/icp-expected-resource-dump.yaml
+++ b/internal/components/discovery/testdata/icp-expected-resource-dump.yaml
@@ -201,7 +201,7 @@ data:
                 drop:
                 - ALL
               privileged: true
-              readOnlyRootFilesystem: {{ ne (annotation .ObjectMeta `sidecar.istio.io/enableCoreDump` .Values.global.proxy.enableCoreDump) true" }}
+              readOnlyRootFilesystem: {{ ne (annotation .ObjectMeta `sidecar.istio.io/enableCoreDump` .Values.global.proxy.enableCoreDump) "true" }}
               runAsGroup: 1337
               fsGroup: 1337
               runAsNonRoot: false
@@ -2543,7 +2543,7 @@ metadata:
   name: stats-filter-1.12-cp-v111x
   namespace: istio-system
   labels:
-    istio.io/rev: cp-v111x
+    istio.io/rev: cp-v111x.istio-system
 spec:
   configPatches:
   - applyTo: HTTP_FILTER
@@ -3012,7 +3012,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: EnvoyFilter
 metadata:
   labels:
-    istio.io/rev: cp-v111x
+    istio.io/rev: cp-v111x.istio-system
   name: tcp-stats-filter-1.12-cp-v111x
   namespace: istio-system
 spec:
