--- a/internal/components/discovery/testdata/icp-passive-expected-resource-dump.yaml
+++ b/internal/components/discovery/testdata/icp-passive-expected-resource-dump.yaml
@@ -172,7 +172,7 @@ data:
                 drop:
                 - ALL
               privileged: true
-              readOnlyRootFilesystem: {{ ne (annotation .ObjectMeta `sidecar.istio.io/enableCoreDump` .Values.global.proxy.enableCoreDump) true" }}
+              readOnlyRootFilesystem: {{ ne (annotation .ObjectMeta `sidecar.istio.io/enableCoreDump` .Values.global.proxy.enableCoreDump) "true" }}
               runAsGroup: 1337
               fsGroup: 1337
               runAsNonRoot: false
@@ -1165,7 +1165,7 @@ data:
         "sts": {
           "servicePort": 0
         },
-        "tag": "1.11.0",
+        "tag": "1.12.2",
         "tracer": {
           "datadog": {
             "address": "$(HOST_IP):8126"
