--- a/.golangci.yml
+++ b/.golangci.yml
@@ -20,6 +20,10 @@ linters:
     - forbidigo
     - golint
     - exhaustive
+    - varnamelen
+    - ireturn
+    - gci
+    - forcetypeassert
 
     # - goconst
     # - gocritic
@@ -58,6 +62,8 @@ linters-settings:
     replace-local: true
     replace-allow-list:
     - github.com/gogo/protobuf
+  maintidx:
+    under: 10 # todo: set a valid value
 
 issues:
   # mainly because of the operator, but we are using helm chart names
