--- a/deploy/charts/istio-operator/Chart.yaml
+++ b/deploy/charts/istio-operator/Chart.yaml
@@ -11,5 +11,5 @@ icon: https://istio.io/latest/img/istio-whitelogo-bluebackground-framed.svg
 # Based on support status of Istio releases: https://istio.io/latest/docs/releases/supported-releases/#support-status-of-istio-releases
 kubeVersion: ">= 1.20.0-0 <= 1.23.0-0"
 
-version: 2.0.9
-appVersion: "v2.13.0-rc.0"
+version: 2.0.10
+appVersion: "v2.13.2"
