--- a/docs/multi-cluster-mesh/active-passive/active-icp.yaml
+++ b/docs/multi-cluster-mesh/active-passive/active-icp.yaml
@@ -2,6 +2,8 @@ apiVersion: servicemesh.cisco.com/v1alpha1
 kind: IstioControlPlane
 metadata:
   name: icp-v113x
+  labels:
+   controlplane.istio.servicemesh.cisco.com/namespace-injection-source: "true"
 spec:
   version: 1.13.3
   mode: ACTIVE
