--- a/docs/multi-cluster-mesh/active-passive/passive-icp.yaml
+++ b/docs/multi-cluster-mesh/active-passive/passive-icp.yaml
@@ -2,6 +2,7 @@ apiVersion: servicemesh.cisco.com/v1alpha1
 kind: IstioControlPlane
 metadata:
   name: icp-v113x
+  namespace: istio-system
 spec:
   version: 1.13.3
   mode: PASSIVE
